testsuite/serd-tests/good/test-boolish-prefix.nt
<http://example.org/s> <http://example.org/p> <http://example.org/falseish#o> .
<http://example.org/s> <http://example.org/p> <http://example.org/trueish#o> .
