testsuite/serd-tests/bad/bad-nt-syntax-uri-less-than.nt
# Bad IRI : less-than.
<http://example/<oops>> <http://example/p> <http://example/o> .
